--- a/Project3/Project3/Project3.csproj
+++ b/Project3/Project3/Project3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6C66537E-EC44-4693-84D0-AEC8CE99F1E9}</ProjectGuid>
+    <ProjectGuid>{52DF97A4-EA5B-4895-B703-DB4C3FCD9C70}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>lab06</RootNamespace>
-    <AssemblyName>lab06</AssemblyName>
+    <RootNamespace>Project3</RootNamespace>
+    <AssemblyName>Project3</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
